--- a/src/components/Menu/index.module.css
+++ b/src/components/Menu/index.module.css
@@ -8,9 +8,8 @@
     .iconWrapper {
         @apply cursor-pointer flex justify-center items-center h-10 w-10 rounded-md;
 
-        &:active,
-        &.hover {
-            background-color: theme('colors.text2');
+        &.hover, &:active {
+            background-color: theme('colors.text2') !important;
         }
     }
 }
